# latent-planning

./: README.md  pyproject.toml
docs/: broad_evidence_report.md  broad_hypothesis_plan.md  codebase_benchmark_report.md  context_ladder_report.md  definitive_verdict.md  extended_evaluation.md  mgh_experiment_plan.md  model_transfer_report.md  pilot_report.md
results/: 20260413T035856Z-mlx-community-gemma-4-e2b-it-4bit-pilot.json  ablation-context-sweep-r1.json  ablation-context-sweep-r3.json  ablation-context-sweep-r5.json  breadth-context-c1.json  breadth-context-c5.json  breadth-suite-llama32-3b.json  breadth-suite.json  codebase-benchmark.json  context-sweep-r1.json  context-sweep-r3.json  context-sweep-r5.json  distractor-sweep.json  recursive-context-sweep-r1.json  recursive-context-sweep-r3.json  recursive-context-sweep-r5.json  section-sweep-s12.json  section-sweep-s4.json  section-sweep-s8.json
src/latent_planning/: __init__.py  breadth_suite.py  cli.py  codebase_benchmark.py  experiment.py  reporting.py
