[project]
name = "latent-planning"
version = "0.1.0"
description = "Pilot experiments for testing decomposition-heavy LM scaffolds on Apple Silicon"
readme = "README.md"
authors = [
    { name = "dylanler", email = "lerdylan@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mlx-lm>=0.31.2",
]

[project.scripts]
latent-planning = "latent_planning:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
